k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api-nodeport
  labels:
    app: heart-disease-api
spec:
  type: NodePort
  selector:
    app: heart-disease-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
